# PhotoPainter-E-Ink-Spectra-6-image-converter

./: .gitignore  ConvertTo6ColorsForEInkSpectra6.py  Install.md  README_ja.md  pyproject.toml  readme.md  requirements-gpu.txt  requirements.txt
