[project]
dependencies = [
  "numpy>=2.2.6",
  "numba>=0.60.0",
  "pillow>=12.1.1",
  "pillow-heif>=1.3.0",
  "scikit-image>=0.25.2",
  "tqdm>=4.67.3",
]
description = "Add your description here"
name = "E-Ink Spectra 6 Image Converter"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"
